View list articles

--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -89,6 +90,9 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/services/ziteserver.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/filters/fromnow.js"></script>
+        <script src="scripts/filters/domain.js"></script>
+        <script src="scripts/directives/article.js"></script>
         <!-- endbuild -->
 </body>
 </html>
