--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,8 @@
         <script src="scripts/filters/fromnow.js"></script>
         <script src="scripts/filters/domain.js"></script>
         <script src="scripts/directives/article.js"></script>
+        <script src="scripts/services/auth.js"></script>
+        <script src="scripts/services/news.js"></script>
         <!-- endbuild -->
 </body>
 </html>
