--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,7 @@
         <script src="scripts/directives/article.js"></script>
         <script src="scripts/services/auth.js"></script>
         <script src="scripts/services/news.js"></script>
+        <script src="scripts/services/logevent.js"></script>
         <!-- endbuild -->
 </body>
 </html>
