--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
+       ga('create', 'UA-38616867-2');
        ga('send', 'pageview');
     </script>
 
@@ -83,6 +83,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
+    <script src="bower_components/angularytics/dist/angularytics.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
