--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');</script> <script src="scripts/vendor.f3f5cc12.js"></script> <script src="scripts/scripts.38f1c448.js"></script> </body> </html>
+       ga('create', 'UA-38616867-2');
+       ga('send', 'pageview');</script> <script src="scripts/vendor.f2e7d675.js"></script> <script src="scripts/scripts.2ea486e4.js"></script> </body> </html>
